--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-cifo/library/notebooks-class
-cifo/library/notebooks-solution
-cifo/library/README.md
-cifo/library/requirements.txt
+library/notebooks-class
+library/notebooks-solution
+library/README.md
+library/requirements.txt
