Finalized Docstrings, formating and applied standards; prepared boiler code for backwards integration of testing, as well as for future development; Codebase style is assumed to be PEP8 compliant.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ authors = [
 license = "MIT"
 readme = "README.md"
 dependencies = [
-    "numpy",
-    "numba",
-    "scipy",
     "openpyxl",
+    "pandas",
+    "numpy",
+    "scipy",
     "matplotlib",
+    "seaborn",
     "ipykernel",
-    "seaborn"
+    "numba"
 ]
 
 [build-system]
