--- a/rubix.configs/hill_climber_config.json
+++ b/rubix.configs/hill_climber_config.json
@@ -1,5 +1,5 @@
 {
-    "problem_constraints" : 
+    "problem_constraints": 
     {   
         "label_col": "Position",
         "weights": [
@@ -15,12 +15,10 @@
         "window": []
     },
     "solver_kwargs" :
-    {
-        "n" : 10,
-        "epochs": 10,
-        "0_m" : 0.05,
-        "0_c" : 0.5,
-        "d_m" : 1e-5,
-        "tol" : 1e-63
+    {   
+        "strategy": "greedy",
+        "n": 100,
+        "n_iter" : 1000,
+        "patience": 1e3
     }
 }
