--- a/rubix.configs/genetic_config.json
+++ b/rubix.configs/genetic_config.json
@@ -17,11 +17,11 @@
     "solver_kwargs" :
     {   
         "strategy": "genetic",
-        "n" : 100,
-        "epochs": 100,
-        "0_m" : 0.05,
-        "0_c" : 0.5,
-        "d_m" : 1e-5,
-        "tol" : 1e-63
+        "n": 100,
+        "epochs": 1000,
+        "patience": 100,
+        "p_roll": 0.5,
+        "p_swap" : 0.5,
+        "p_cross": 0.5
     }
 }
