--- a/rubix.configs/random_search_config.json
+++ b/rubix.configs/random_search_config.json
@@ -17,6 +17,7 @@
     "solver_kwargs" :
     {   
         "strategy": "random",
+        "operator_type": "random",
         "n": 100,
         "n_iter" : 10
     }
