--- a/rubix.configs/genetic_config.json
+++ b/rubix.configs/genetic_config.json
@@ -22,8 +22,8 @@
         "epochs": 200,
         "patience": 50,
         "operator_type": "rubix",
-        "select_type": "tournament",
-        "vs_type": "probabilistic",
+        "selection_method": "tournament",
+        "selection_type": "probabilistic",
         "x_strategy": "block_crossover",
         "vs_size": 2,
         "elitism": 1,
